--- a/style.css
+++ b/style.css
@@ -1,95 +1,96 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
-body , html {
-    background-color: rgb(0, 0, 0);
-    color: white;
+body,
+html {
+  background-color: rgb(0, 0, 0);
+  color: white;
 }
-#Navbar{
-    border-bottom: 1px solid gray;
-    height: 80px;
-    box-shadow: 0 3px 10px gray;
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+#Navbar {
+  border-bottom: 1px solid gray;
+  height: 80px;
+  box-shadow: 0 3px 10px gray;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  z-index: 8;
 }
-#Icon{
-    border: 1px solid rgb(0, 255, 0);
-    box-shadow: 0 0 10px rgb(0, 255, 0);
-    background-color: rgb(28, 156, 28);
-    height: 50px ;
-    width: 150px;
-    border-radius: 15px;
-    text-align: center;
-    padding-top: 15px;
-    font-size: larger;
+#Icon {
+  border: 1px solid rgb(0, 255, 0);
+  box-shadow: 0 0 10px rgb(0, 255, 0);
+  background-color: rgb(28, 156, 28);
+  height: 50px;
+  width: 150px;
+  border-radius: 15px;
+  text-align: center;
+  padding-top: 15px;
+  font-size: larger;
 }
-#NavButtons{
-    display: flex;
-    gap: 80px;
-    margin-top: 10px;
-  
+#NavButtons {
+  display: flex;
+  gap: 80px;
+  margin-top: 10px;
 }
-#NavButtons > div{
-   
-    text-align: center;
-    padding: 15px;
-    padding-top: 30px;
-    border-radius:15px 15px 0 0 ;
-     transition: all 0.3s;
-     cursor: pointer;
+#NavButtons > div {
+  text-align: center;
+  padding: 15px;
+  padding-top: 30px;
+  border-radius: 15px 15px 0 0;
+  transition: all 0.3s;
+  cursor: pointer;
 }
-#NavButtons > div:hover{
-    text-decoration:underline;
-      box-shadow: 0 0 10px rgb(0, 255, 0);
-    background-color: rgb(28, 156, 28);
+#NavButtons > div:hover {
+  text-decoration: underline;
+  box-shadow: 0 0 10px rgb(0, 255, 0);
+  background-color: rgb(28, 156, 28);
 }
-#Container{
-    height: auto;
-    width: 100vw;
-    
-    max-height: 1000px;
-    display: flex;
-}
-#playlist{
-    background-color: rgb(17, 17, 17);
-    margin: 50px;
-    border: 3px solid #0c0c0c;
-    border-radius: 5px;
-    height: 500px;
-    box-shadow: 0 0 5px #9e9e9e;
-    width: 30%;
+#Container {
+  height: auto;
+  width: 100vw;
 
+  max-height: 1000px;
+  display: flex;
+  animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
-.header{
-    background-color: black;
-    width: 100%;
-    height:15%;
-    padding: 10px;
-    text-align: center;
-    border-radius: 5px 5px 0 0; 
+
+#playlist {
+  background-color: rgb(17, 17, 17);
+  margin: 50px;
+  border: 3px solid #0c0c0c;
+  border-radius: 5px;
+  height: 550px;
+  box-shadow: 0 0 5px #9e9e9e;
+  width: 30%;
 }
-.title{
-    height: 30%;
+.header {
+  background-color: black;
+  width: 100%;
+  height: 15%;
+  padding: 10px;
+  text-align: center;
+  border-radius: 5px 5px 0 0;
 }
-#Facts{
-     padding: 21px;
+.title {
+  height: 30%;
 }
-#PlaylistCont{
-    width:100%;
-    height:85% ;
-    background-color: rgb(31, 31, 31);
-    overflow-y: scroll; /*to be changed */
-   overflow-x: hidden;
-   
+#Facts {
+  padding: 21px;
+}
+#PlaylistCont {
+  width: 100%;
+  height: 85%;
+  background-color: rgb(31, 31, 31);
+  overflow-y: scroll; /*to be changed */
+  overflow-x: hidden;
 }
 
 .music-box {
-    padding: 5px;
+  padding: 5px;
   border: 2px solid white;
   margin: 5px;
   border-radius: 20px;
@@ -123,100 +124,133 @@ marquee {
   border-radius: 10px;
   cursor: pointer;
 }
-#MusicPlayer{
-    background-color: rgb(17, 17, 17);
-    margin: 50px;
-    border: 3px solid #0c0c0c;
-    border-radius: 5px;
-    height: 500px;
-    width: 28%;
-    display: flex;
-    box-shadow: 0 0 5px #9e9e9e;
-    align-items: center;
-    flex-direction: column;
+#MusicPlayer {
+  background-color: rgb(17, 17, 17);
+  margin: 50px;
+  border: 3px solid #0c0c0c;
+  border-radius: 5px;
+  height: 550px;
+  width: 28%;
+  display: flex;
+  box-shadow: 0 0 5px #9e9e9e;
+  align-items: center;
+  flex-direction: column;
 }
-#FactContainer{
-     background-color: rgb(17, 17, 17);
-    margin: 50px;
-    border: 3px solid #0c0c0c;
-    border-radius: 5px;
-    height: 250px;
-    width: 25%;
-    display: flex;
-    box-shadow: 0 0 5px #9e9e9e;
-   
-    align-items: center;
-    flex-direction: column;
-}
-#Img{
-    margin-top: 40px;
-    width: 60%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-}
-#Img > img{
-    height: 200px;
-    width: 200px;
-    border-radius: 10px;
-    filter: grayscale(100%);
-    transition: all 0.3s;
-}
-#Details{
-    width: 100%;
-    /* border: 1px solid red; */
-    padding: 10px;
+#FactContainer {
+  background-color: rgb(17, 17, 17);
+  margin: 50px;
+  border: 3px solid #0c0c0c;
+  border-radius: 5px;
+  height: 250px;
+  width: 25%;
+  display: flex;
+  box-shadow: 0 0 5px #9e9e9e;
 
+  align-items: center;
+  flex-direction: column;
 }
-#Details > p{
-    font-size: 10px;
+#Img {
+  margin-top: 40px;
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-#Controls{
-    background-color: #0c0c0c;
-    color: white;
-    padding: 15px;
-    margin: 10px;
-    border-radius: 5px;
+#Img > img {
+  height: 200px;
+  width: 200px;
+  border-radius: 10px;
+  filter: grayscale(100%);
+  transition: all 0.3s;
+}
+#Details {
+  width: 100%;
+  /* border: 1px solid red; */
+  padding: 10px;
+}
+#Details > p {
+  font-size: 10px;
+}
+#Controls {
+  background-color: #0c0c0c;
+  color: white;
+  padding: 15px;
+  margin: 10px;
+  border-radius: 5px;
 }
 #seek-slider {
   flex: 1;
   accent-color: #00ffff;
-  
 }
-#play-pause{
-    padding: 5px;
-    background-color: #0c0c0c;
-    color: white;
-    font-size: xx-large;
-    border: 0;
+#play-pause {
+  padding: 5px;
+  background-color: #0c0c0c;
+  color: white;
+  font-size: xx-large;
+  border: 0;
 }
-  
+
+.NextPrev {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+
+  background-color: #1e1e1e;
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+}
+
+.NextPrev button {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #292929;
+  color: #ffffff;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.NextPrev button:hover {
+  background-color: #3d3d3d;
+}
+
+/* Animations */
+@keyframes slide-in-left {
+  0% {
+    -webkit-transform: translateX(-1000px);
+    transform: translateX(-1000px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
 
 @keyframes MusicBoost {
-    0%{
-         box-shadow: 0 0 0px white;
-    }
-    25%{
-         box-shadow: 0 0 20px white;
-    }
-    50%{
-         box-shadow: 0 0 40px white;
-    }
-    75%{
-         box-shadow: 0 0 20px white;
-    }
-    100%{
-         box-shadow: 0 0 0px white;
-    }
-    
+  0% {
+    box-shadow: 0 0 0px white;
+  }
+  25% {
+    box-shadow: 0 0 20px white;
+  }
+  50% {
+    box-shadow: 0 0 40px white;
+  }
+  75% {
+    box-shadow: 0 0 20px white;
+  }
+  100% {
+    box-shadow: 0 0 0px white;
+  }
 }
-
-/* For tablets and small desktops */
+/* Responsiveness of the Website */
 @media (max-width: 1024px) {
-  #Container{
+  #Container {
     flex-wrap: wrap;
-     
   }
   .music-box {
     flex-direction: column;
@@ -235,16 +269,16 @@ marquee {
   }
 }
 
-/* For large phones and small tablets */
 @media (max-width: 768px) {
-    #playlist , #MusicPlayer , #FactContainer{
-        width: 80%;
-    }
-
+  #playlist,
+  #MusicPlayer,
+  #FactContainer {
+    width: 80%;
+  }
 
   .music-box {
     flex-direction: column;
-   
+
     padding: 14px;
   }
 
@@ -259,7 +293,18 @@ marquee {
   }
 }
 
-/* For mobile phones */
+@media (max-width: 600px) {
+  .NextPrev {
+    gap: 10px;
+  }
+
+  .NextPrev button {
+    padding: 8px;
+    width: 90%;
+    font-size: 18px;
+  }
+}
+
 @media (max-width: 480px) {
   .music-box {
     border-radius: 12px;
@@ -277,7 +322,6 @@ marquee {
   }
 }
 
-/* For extra small devices (e.g., very old phones) */
 @media (max-width: 360px) {
   .music-box {
     padding: 10px;
