--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 }
 body,
 html {
+  height: 100vh;
+  width: 100vw;
   background-color: rgb(0, 0, 0);
   color: white;
 }
@@ -88,7 +90,11 @@ html {
   overflow-y: scroll; /*to be changed */
   overflow-x: hidden;
 }
-
+#MusicImage{
+  height: 180px;
+  width: 160px;
+  object-fit: cover;
+}
 .music-box {
   padding: 5px;
   border: 2px solid white;
@@ -232,19 +238,19 @@ marquee {
 
 @keyframes MusicBoost {
   0% {
-    box-shadow: 0 0 0px white;
+    box-shadow: 0 0 0px #018ab0;
   }
   25% {
-    box-shadow: 0 0 20px white;
+    box-shadow: 0 0 20px #018ab0;
   }
   50% {
-    box-shadow: 0 0 40px white;
+    box-shadow: 0 0 40px #018ab0;
   }
   75% {
-    box-shadow: 0 0 20px white;
+    box-shadow: 0 0 20px #018ab0;
   }
   100% {
-    box-shadow: 0 0 0px white;
+    box-shadow: 0 0 0px #018ab0;
   }
 }
 /* Responsiveness of the Website */
